sass/_extreme2.sass
.bg
	background: url(../img/bg1.jpg) repeat-y 0 0
	overflow: hidden
	+background-size(100%, auto)
.bg1
	overflow: hidden
	background: url(../img/bg0.jpg) repeat-y 0 0
	+background-size(100%, auto)
.box
	+s(pic-right)
	width: 251px
	height: 199px
	+background-size(251px, 199px)
	float: right
.item
	width: 292px 
	margin: 0 auto
	background: url(../img/item.png) no-repeat 0 100%
	+background-size(100%, auto)  
	margin-bottom: 220px 
	position: relative
	z-index: 10
	&.first
		margin-top: 220px 
	&.last
		margin-bottom: 0 
	&.item_video
		margin-bottom: 80px 
		&.last
			margin-bottom: 0
		&.first
			margin-top: 30px 
		.item__pic
			margin-top: 0
			margin-left: 0
			margin-right: 0
			padding-left: 23px   
			padding-top: 23px 
			padding-right: 23px 
			margin-bottom: 20px 
		.item__content
			margin-top: 0 
		.item__pic
			top: 0
		h2
			color: #72502E
			font-size: 22px  
	.item__content
		padding: 0 23px 15px 23px 
		margin-top: -250px 
	h2
		font-size: 27px 
		font-weight: normal
		color: #DD4F1A 
		+fn
	p
		font-size: 16px 
		color: #804A32
		margin-top: 12px  
		em
			+fd
			font-style: normal 
			font-size: 13px 
	p+p
		margin-top: 16px 
	.item__more
		border-radius: 4px
		background-clip: padding-box
		background-color: #f7f2e6
		box-shadow: inset -2px 2px 0 #fff
		display: inline-block
		color: #a98968
		font-size: 18px
		font-weight: normal
		text-decoration: none
		text-shadow: 0 1px 0 #fff
		padding: 6px 10px
		cursor: pointer 
		line-height: 1
		border: 1px solid rgba(#A8896B,.6)
		margin-top: 24px 

	.item__pic
		margin: 0 auto
		display: block
		position: relative
		top: -220px 
		margin: 0 -20px 
		img
			display: block
			width: 100% 

